// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThroughputInputAutoPilotV3Component autopilot input visible 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 10,
    }
  }
>
  <Text>
    Provision maximum RU/s required by this resource. Estimate your required RU/s with
    <a
      href="https://cosmos.azure.com/capacitycalculator/"
      target="_blank"
    >
       capacity calculator
    </a>
     Max RU/s
  </Text>
  <StyledTextFieldBase
    disabled={false}
    id="autopilotInput"
    key="auto pilot throughput input"
    min={4000}
    onChange={[Function]}
    required={true}
    step={100}
    styles={
      Object {
        "fieldGroup": Object {
          "borderColor": "",
          "height": 25,
          "selectors": Object {
            ":disabled": Object {
              "backgroundColor": "#ddd",
              "borderColor": "#969696",
            },
          },
          "width": 300,
        },
      }
    }
    type="number"
    value="4000"
  />
  <Text />
  <Text />
</Stack>
`;

exports[`ThroughputInputAutoPilotV3Component spendAck checkbox visible 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 10,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      disabled={true}
      id="throughputInput"
      key="provisioned throughput input"
      min={10000}
      onChange={[Function]}
      required={true}
      step={100}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": "#ddd",
                "borderColor": "#969696",
              },
            },
            "width": 300,
          },
        }
      }
      type="number"
      value="100"
    />
    <Text />
    <StyledCheckboxBase
      checked={false}
      id="spendAckCheckBox"
      label="spendAckText"
      onChange={[Function]}
      styles={
        Object {
          "label": Object {
            "margin": 0,
            "padding": "2 0 2 0",
          },
          "text": Object {
            "fontSize": 12,
          },
        }
      }
    />
    <p>
      Choose unlimited storage capacity for more than 10,000 RU/s.
    </p>
  </Stack>
</Stack>
`;

exports[`ThroughputInputAutoPilotV3Component throughput input visible 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 10,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      disabled={true}
      id="throughputInput"
      key="provisioned throughput input"
      min={10000}
      onChange={[Function]}
      required={true}
      step={100}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": "#ddd",
                "borderColor": "#969696",
              },
            },
            "width": 300,
          },
        }
      }
      type="number"
      value="100"
    />
    <Text />
    <p>
      Choose unlimited storage capacity for more than 10,000 RU/s.
    </p>
  </Stack>
</Stack>
`;

exports[`ThroughputInputReactComponent autopilot input visible 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 10,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledWithResponsiveMode
      className="autoPilotSelector"
      defaultSelectedKey={1}
      id="autopilotSelector"
      onChange={[Function]}
      options={
        Array [
          Object {
            "itemType": 2,
            "key": "Default",
            "text": "Choose Max RU/s",
          },
          Object {
            "key": 1,
            "text": "tier 1",
          },
          Object {
            "key": 2,
            "text": "tier 2",
          },
        ]
      }
      styles={
        Object {
          "dropdown": Object {
            "width": 300,
          },
        }
      }
    />
    <Text />
  </Stack>
</Stack>
`;

exports[`ThroughputInputReactComponent spendAck checkbox visible 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 10,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      disabled={false}
      id="throughputInput"
      key="provisioned throughput input"
      min={10000}
      onChange={[Function]}
      required={true}
      step={100}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": "#ddd",
                "borderColor": "#969696",
              },
            },
            "width": 300,
          },
        }
      }
      type="number"
      value="100"
    />
    <Text />
    <StyledCheckboxBase
      checked={false}
      id="spendAckCheckBox"
      label="spendAckText"
      onChange={[Function]}
      styles={
        Object {
          "label": Object {
            "margin": 0,
            "padding": "2 0 2 0",
          },
          "text": Object {
            "fontSize": 12,
          },
        }
      }
    />
    <Text>
      Choose unlimited storage capacity for more than 10,000 RU/s.
    </Text>
  </Stack>
</Stack>
`;

exports[`ThroughputInputReactComponent throughput input visible 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 10,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      disabled={false}
      id="throughputInput"
      key="provisioned throughput input"
      min={10000}
      onChange={[Function]}
      required={true}
      step={100}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": "#ddd",
                "borderColor": "#969696",
              },
            },
            "width": 300,
          },
        }
      }
      type="number"
      value="100"
    />
    <Text />
    <Text>
      Choose unlimited storage capacity for more than 10,000 RU/s.
    </Text>
  </Stack>
</Stack>
`;
